fix: optimize auth login and dispatch validation